--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Óraimunka">
+  <meta name="keywords" content="Írógép">
+  <meta name="author" content="Papp Niki">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Papp Nikoletta</title>
 </head>
 <body>
-    <div><h1>Papp Nikoletta</h1></div>
+    <div class="tartalom">
+        <h1>Egy írás, amit kezünkkel olvasunk</h1>
+        <div class="jobbra">
+            <h2>A Braille-írásről</h2>
+            <img class="balkep" src="kepek/abc.gif" alt="abc">
+            <p>A Braille-írás, más néven pontírás, a vakok számára készült és általuk használt, általánosan elfogadott írásrendszer. Minden jel a papír síkjából kiemelkedő hat pont kombinációja. A Braille-jeleket sorokban nyomják a papírba, és úgy olvassák, hogy az ujjukat könnyedén végigvezetik a sorokon. Ezt a speciális technikát alkalmazó ábécét a francia Louis Braille találta ki 1821-ben a vak emberek számára. Segítségével lehetővé vált a vakok számára is az írás és olvasás elsajátítása. Különleges Braille-jelek, illetve jelmódosítások léteznek a kottaírásra, a gyorsírásra és persze a világ legtöbb nyelvére, továbbá ma már olyan hatbillentyűs írógépek is vannak, melyeken egy-egy billentyű a Braille- féle hatpontos jel egy-egy pontjának felel meg.</p>
+        <br class="torol">
+        </div>
+        <div class="balra">
+            <h2>Pontírógép</h2>
+            <img id="jobbkep" src="kepek/irogep.jpg" alt="irogep">
+            <p>A gép hét billentyűje közül hat a Braille-írás egy-egy pontjának kialakítására, egy pedig a szóköz előállítására szolgál. Egyszerre kell lenyomni az írni kívánt betű pontösszetételének megfelelő billentyűket.</p>
+            <br class="torol">
+        </div>
+        <div class="jobbra">
+            <h2>Louis Braille</h2>
+            <img src="kepek/mellkep.jpg" alt="mellkep">
+            <p>A pontnak mint íráselemnek a felfedezése egy francia tüzértiszt, Charles Barbier százados nevéhez fűződik. 1819-ben kidolgozta "éjszakai írás" módszerét azzal a céllal, hogy a katonák sötétben is képesek legyenek írásos parancsokat közölni egymással. Barbier a betűket táblázatba foglalva adta meg 6-6 oszlopban. Rendszere így 36 hangot jelölt. Ezt a pontrendszert Louis Braille (1809-1852), a párizsi Vakok Intézetének tanítója fejlesztette tovább. </p>
+            <br class="torol">
+        </div>
+    </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
